--- a/flash.ioc
+++ b/flash.ioc
@@ -40,12 +40,14 @@ Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin2=PF9
+Mcu.Pin3=PF10
+Mcu.Pin4=PH0-OSC_IN
+Mcu.Pin5=PH1-OSC_OUT
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -73,6 +75,18 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PF10.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PF10.GPIO_Label=LED1
+PF10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PF10.Locked=true
+PF10.PinState=GPIO_PIN_SET
+PF10.Signal=GPIO_Output
+PF9.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PF9.GPIO_Label=LED0
+PF9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PF9.Locked=true
+PF9.PinState=GPIO_PIN_SET
+PF9.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
