--- a/flash.ioc
+++ b/flash.ioc
@@ -1,4 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC3.EnableAnalogWatchDog=false
+ADC3.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog
+ADC3.InjNumberOfConversion=0
+ADC3.NbrOfConversion=1
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-1\#ChannelRegularConversion=1
+ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -30,24 +38,26 @@ GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP0=ADC3
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin2=PF9
-Mcu.Pin3=PF10
-Mcu.Pin4=PH0-OSC_IN
-Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin2=PF7
+Mcu.Pin3=PF9
+Mcu.Pin4=PF10
+Mcu.Pin5=PH0-OSC_IN
+Mcu.Pin6=PH1-OSC_OUT
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -81,6 +91,8 @@ PF10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF10.Locked=true
 PF10.PinState=GPIO_PIN_SET
 PF10.Signal=GPIO_Output
+PF7.Mode=IN5
+PF7.Signal=ADC3_IN5
 PF9.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PF9.GPIO_Label=LED0
 PF9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -122,7 +134,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
