--- a/flash.ioc
+++ b/flash.ioc
@@ -10,9 +10,31 @@ ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.I2C1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C1_RX.2.Instance=DMA1_Stream0
+Dma.I2C1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_RX.2.Mode=DMA_NORMAL
+Dma.I2C1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C1_TX.3.Instance=DMA1_Stream6
+Dma.I2C1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.3.Mode=DMA_NORMAL
+Dma.I2C1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
-Dma.RequestsNb=2
+Dma.Request2=I2C1_RX
+Dma.Request3=I2C1_TX
+Dma.RequestsNb=4
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -35,20 +57,28 @@ Dma.USART1_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.GeneralCallMode=I2C_GENERALCALL_DISABLE
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode,NoStretchMode,GeneralCallMode,OwnAddress
+I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
+I2C1.OwnAddress=10
 KeepUserPlacement=false
 Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC3
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB9
+Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin2=PF7
 Mcu.Pin3=PF9
 Mcu.Pin4=PF10
@@ -56,19 +86,23 @@ Mcu.Pin5=PH0-OSC_IN
 Mcu.Pin6=PH1-OSC_OUT
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin9=PB8
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -81,6 +115,16 @@ PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB8.GPIOParameters=GPIO_Pu
+PB8.GPIO_Pu=GPIO_NOPULL
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Pu
+PB9.GPIO_Pu=GPIO_NOPULL
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -134,7 +178,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
