--- a/flash.ioc
+++ b/flash.ioc
@@ -18,7 +18,7 @@ Dma.I2C1_RX.2.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_RX.2.Mode=DMA_NORMAL
 Dma.I2C1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_RX.2.Priority=DMA_PRIORITY_MEDIUM
 Dma.I2C1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.I2C1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
 Dma.I2C1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -28,7 +28,7 @@ Dma.I2C1_TX.3.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.3.Mode=DMA_NORMAL
 Dma.I2C1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_TX.3.Priority=DMA_PRIORITY_MEDIUM
 Dma.I2C1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
@@ -102,7 +102,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -116,12 +116,12 @@ PA10.Signal=USART1_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB8.GPIOParameters=GPIO_Pu
-PB8.GPIO_Pu=GPIO_NOPULL
+PB8.GPIO_Pu=GPIO_PULLUP
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.GPIOParameters=GPIO_Pu
-PB9.GPIO_Pu=GPIO_NOPULL
+PB9.GPIO_Pu=GPIO_PULLUP
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
