--- a/flash.ioc
+++ b/flash.ioc
@@ -18,7 +18,7 @@ Dma.I2C1_RX.2.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_RX.2.Mode=DMA_NORMAL
 Dma.I2C1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.2.Priority=DMA_PRIORITY_MEDIUM
+Dma.I2C1_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.I2C1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.I2C1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
 Dma.I2C1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -28,7 +28,7 @@ Dma.I2C1_TX.3.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.3.Mode=DMA_NORMAL
 Dma.I2C1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.3.Priority=DMA_PRIORITY_MEDIUM
+Dma.I2C1_TX.3.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.I2C1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
@@ -94,22 +94,22 @@ Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C1_ER_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
