使用SPI方式驱动LCD ST7789

--- a/flash.ioc
+++ b/flash.ioc
@@ -34,7 +34,29 @@ Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
 Dma.Request2=I2C1_RX
 Dma.Request3=I2C1_TX
-Dma.RequestsNb=4
+Dma.Request4=SPI1_TX
+Dma.Request5=SPI1_RX
+Dma.RequestsNb=6
+Dma.SPI1_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.5.Instance=DMA2_Stream0
+Dma.SPI1_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.5.Mode=DMA_NORMAL
+Dma.SPI1_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.5.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI1_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI1_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.4.Instance=DMA2_Stream3
+Dma.SPI1_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.4.Mode=DMA_NORMAL
+Dma.SPI1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.4.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -70,24 +92,31 @@ Mcu.IP1=DMA
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB9
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin2=PF7
 Mcu.Pin3=PF9
 Mcu.Pin4=PF10
 Mcu.Pin5=PH0-OSC_IN
 Mcu.Pin6=PH1-OSC_OUT
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PB8
-Mcu.PinsNb=12
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -96,7 +125,9 @@ MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream7_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -107,12 +138,24 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA4.GPIOParameters=GPIO_Speed,GPIO_Label
+PA4.GPIO_Label=DISPLAY_CS
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB8.GPIOParameters=GPIO_Pu
@@ -129,6 +172,16 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC4.GPIOParameters=GPIO_Speed,GPIO_Label
+PC4.GPIO_Label=DISPLAY_RST
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Speed,GPIO_Label
+PC5.GPIO_Label=DISPLAY_DC
+PC5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PF10.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PF10.GPIO_Label=LED1
 PF10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
@@ -178,7 +231,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -210,6 +263,14 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,TIMode,CLKPolarity,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.TIMode=SPI_TIMODE_DISABLE
+SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
